--- a/css/style.css
+++ b/css/style.css
@@ -9,11 +9,12 @@
   /* colors */
   --clr-ntrl-min: #fff;
   --clr-ntrl-max: #000;
-  --clr-primary: #FFA501;
+
+  --clr-primary: hsl(39, 100%, 50%);  /* #FFA501 */
+  --clr-primary-light: hsl(39, 100%, 60%);
+  --clr-primary-dark: hsl(39, 84%, 50%);
 
   --section-gap: 120px;
-  --content-gap: 60px;
-
   --circle-url: url('../img/svg/circle.svg');
 }
 
@@ -35,7 +36,6 @@ a {
 img {
 	max-width: 100%;
 }
-
 
 @font-face {
   font-family: 'Poppins';
@@ -107,6 +107,17 @@ p {
   font-weight: 700;
   background-color: var(--clr-primary);
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
+  transition: all .3s ease-in-out;
+}
+
+.btn-primary:hover {
+  background-color: var(--clr-primary-light);
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+}
+
+.btn-primary:active {
+  background-color: var(--clr-primary-dark);
+  box-shadow: none;
 }
 
 .title {
@@ -146,37 +157,7 @@ p {
   row-gap: var(--section-gap);
 }
 
-
-/* HERO */
-
-.hero {
-  background-image: url('../img/content/hero-background.jpg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center center;
-}
-
-.hero__container {
-  padding-top: 200px;
-  min-height: 800px;
-
-}
-
-.hero__content {
-  flex-direction: column;
-  max-width: 50%;
-}
-
-.hero__subtitle {
-  margin-bottom: 6px;
-}
-
-.hero__buttons {
-  align-items: center;
-  gap: 44px;
-  font-size: var(--fs-medium);
-  font-weight: 700;
-}
+/* Abstracts */
 
 /* Socials */
 
@@ -214,14 +195,193 @@ p {
   display: flex;
 }
 
-.social-media .social__link svg {
-  fill: #212121;
-}
-
-.social-media .social {
+.social {
   gap: 15px;
 }
 
+.social__link svg {
+  fill: var(--clr-ntrl-max);
+  transition: fill .3s ease-in-out;
+}
+
+.social__link:hover svg {
+  fill: var(--clr-primary);
+}
+
+.social__link:active svg {
+  fill: var(--clr-primary-dark);
+}
+
+.nav__social .social__link:hover svg {
+  fill: var(--clr-ntrl-min);
+}
+
+/* Infographics */
+
+.infographic-icon {
+  padding-left: 60px;
+  background-repeat: no-repeat;
+  background-position: 15px 15px, left top;
+}
+
+.infographic-icon_web {
+  background-image: url('../img/svg/icon_web.svg'), var(--circle-url);
+}
+
+.infographic-icon_app {
+  background-image: url('../img/svg/icon_app.svg'), var(--circle-url);
+}
+
+.infographic-icon_design {
+  background-image: url('../img/svg/icon_design.svg'), var(--circle-url);
+}
+
+.infographic-icon_university {
+  background-image: url('../img/svg/icon_university.svg'), var(--circle-url);
+}
+
+.infographic-icon_courses {
+  background-image: url('../img/svg/icon_courses.svg'), var(--circle-url);
+}
+
+.infographic-icon_developer {
+  background-image: url('../img/svg/icon_developer.svg'), var(--circle-url);
+}
+
+.infographic-icon_designer {
+  background-image: url('../img/svg/icon_designer.svg'), var(--circle-url);
+}
+
+.infographic-icon_app,
+.infographic-icon_university,
+.infographic-icon_developer {
+  background-position: 17px 15px, left top;
+}
+
+/* Menu and sidebar */
+
+.burger-menu {
+  position: absolute;
+  top: 20px;
+  right: 30px;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: none;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.75);
+  z-index: 500;
+}
+
+.sidebar {
+  position: fixed;
+  top: 0;
+  left: -345px;
+  flex-direction: column;
+  padding: 24px 25px 50px 40px;
+  width: 345px;
+  height: 100vh;
+  background-color: var(--clr-primary);
+  transition: left .3s ease-in-out; 
+  z-index: 600;
+}
+
+.sidebar.open {
+  left: 0;
+}
+
+.close-btn {
+  align-self: flex-end;
+  margin-bottom: 100px;
+}
+
+.nav__list {
+  flex-direction: column;
+  gap: 25px;
+}
+
+.nav__item {
+  padding-left: 35px;
+  text-transform: uppercase;
+  font-size: 24px;
+  font-weight: 700;
+  color: var(--clr-ntrl-min);
+  background-image: url('../img/svg/circle-outline.svg');
+  background-size: 15px 15px;
+  background-repeat: no-repeat;
+  background-position: left center;
+}
+
+.nav__social {
+  justify-content: center;
+  margin-top: auto;
+}
+
+.nav__link {
+  position: relative;
+  display: inline-flex;
+}
+
+.nav__link::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: 2px;
+  background: var(--clr-ntrl-min);
+  transform: scaleX(0);
+  transition: transform .5s ease-in-out;
+}
+
+.nav__link:hover::after {
+  transform: scaleX(1);
+}
+
+/* MAIN. Sections of page content */
+
+/* HERO section */
+
+.hero {
+  background-image: url('../img/content/hero-background.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+}
+
+.hero__container {
+  padding-top: 200px;
+  min-height: 800px;
+
+}
+
+.hero__content {
+  flex-direction: column;
+  max-width: 50%;
+}
+
+.hero__subtitle {
+  margin-bottom: 6px;
+}
+
+.hero__buttons {
+  align-items: center;
+  gap: 44px;
+  font-size: var(--fs-medium);
+  font-weight: 700;
+}
+
+.regular-link {
+  transition: color .3s ease-in-out;
+}
+
+.regular-link:hover {
+  color: var(--clr-primary);
+}
 
 /* ABOUT section */
 
@@ -295,49 +455,6 @@ p {
 .about__caption {
   margin-bottom: 8px;
 }
-
-/* infographics */
-
-.infographic-icon {
-  padding-left: 60px;
-  background-repeat: no-repeat;
-  background-position: 15px 15px, left top;
-}
-
-.infographic-icon_web {
-  background-image: url('../img/svg/icon_web.svg'), var(--circle-url);
-}
-
-.infographic-icon_app {
-  background-image: url('../img/svg/icon_app.svg'), var(--circle-url);
-}
-
-.infographic-icon_design {
-  background-image: url('../img/svg/icon_design.svg'), var(--circle-url);
-}
-
-.infographic-icon_university {
-  background-image: url('../img/svg/icon_university.svg'), var(--circle-url);
-}
-
-.infographic-icon_courses {
-  background-image: url('../img/svg/icon_courses.svg'), var(--circle-url);
-}
-
-.infographic-icon_developer {
-  background-image: url('../img/svg/icon_developer.svg'), var(--circle-url);
-}
-
-.infographic-icon_designer {
-  background-image: url('../img/svg/icon_designer.svg'), var(--circle-url);
-}
-
-.infographic-icon_app,
-.infographic-icon_university,
-.infographic-icon_developer {
-  background-position: 17px 15px, left top;
-}
-
 
 /* EXPERIENCE section */
 
