--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ img {
 
 body {
   position: relative;
-  margin-bottom: 92px;
+  margin-bottom: var(--section-gap);
   min-width: 320px;
   width: 100%;
 	font-family: 'Poppins', sans-serif;
@@ -101,13 +101,17 @@ p {
 }
 
 .btn-primary {
-  padding: 2% 4.7%;;
+  padding: 12px 26px;
   min-height: 45px;
   font-size: var(--fs-medium);
   font-weight: 700;
   background-color: var(--clr-primary);
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
   transition: all .3s ease-in-out;
+}
+
+.btn-primary:focus {
+  outline: none;
 }
 
 .btn-primary:hover {
@@ -195,6 +199,16 @@ p {
   display: flex;
 }
 
+.social__link:focus,
+.regular-link:focus {
+  outline: 1px solid var(--clr-primary);
+}
+
+.social__link:active,
+.regular-link:active {
+  outline: none;
+}
+
 .social {
   gap: 15px;
 }
@@ -215,6 +229,7 @@ p {
 .nav__social .social__link:hover svg {
   fill: var(--clr-ntrl-min);
 }
+
 
 /* Infographics */
 
@@ -354,14 +369,13 @@ p {
 }
 
 .hero__container {
-  padding-top: 200px;
   min-height: 800px;
-
 }
 
 .hero__content {
   flex-direction: column;
-  max-width: 50%;
+  padding-top: 200px;
+  max-width: 60%;
 }
 
 .hero__subtitle {
@@ -387,14 +401,22 @@ p {
 
 .profile-card {
   display: flex;
+  flex-wrap: wrap;
   gap: 70px;
 }
 
 .profile-card__image {
-  max-width: 400px;
+  align-self: flex-start;
+  flex: 1;
+  max-width: 35%;
+  object-fit: contain;
 }
 
 .profile-card__body {
+  max-width: 50%;
+}
+
+.contacts .profile-card__body {
   flex: 1;
 }
 
@@ -437,10 +459,6 @@ p {
   font-size: var(--fs-medium);
 }
 
-.about .profile-card__body {
-  max-width: 570px;
-}
-
 .about__list {
   flex-wrap: wrap;
   gap: 20px 50px;
@@ -448,7 +466,7 @@ p {
 }
 
 .about__list-item {
-  max-width: 260px;
+  max-width: 45%;
   padding-top: 3px;
 }
 
@@ -459,6 +477,8 @@ p {
 /* EXPERIENCE section */
 
 .experience__content {
+  flex-wrap: wrap;
+  gap: 60px;
   padding-left: 65px;
   padding-right: 91px;
 }
@@ -577,6 +597,7 @@ p {
 }
 
 .inputs-group {
+  flex-wrap: wrap;
   gap: 25px;
 }
 
@@ -595,6 +616,16 @@ legend.form__legend {
 
 fieldset.form__fieldset {
   margin-inline: 0;
+}
+
+.form__fieldset:focus-within {
+  border-color: var(--clr-primary);
+  box-shadow: 0 1px 5px var(--clr-primary);
+}
+
+.form__fieldset.error {
+  border-color: red;
+  box-shadow: 0 0 10px red;
 }
 
 .form__input,
